# dissertation

./: .gitignore  .latexmkrc  MastersDoctoralThesis.cls  defines.tex  playground.tex  pyproject.toml  references.bib  test.tex  thesis.tex  uthesis.cls
appendices/: appendix-1.tex
chapters/: ch1-intro.tex  ch2-litreview.tex  introduction.tex
chapters/lool/: background.tex  design.tex  discussion.tex  evaluation.tex  graalvm-fuzzing.tex  related-work.tex
chapters/r2c/: background.tex  design.tex  discussion.tex  evaluation.tex  future-work.tex  implementation.tex
data/: dblp_trends.json
data/lool/: optimizationcounts.txt
data/psp/: name_map_fuzzbench.json  name_map_magma.json
data/r2c/: apache-epyc.json  apache-i9.json  apache.json  btra-steps-i9.json  components.json  computed-tma-data.json  full-r2c.json  nginx-epyc-net.json  nginx-epyc.json  nginx-i9.json  (+5 more)
figures/: coevolution-timeline.tex  r2c-exec-time-allmachines.pgf  r2c-exec-time.pgf
includes/: coevolution.tex  conclusion.tex  fuzzer-guidance.tex  introduction.tex  outlook-defense.tex  outlook-fuzzing.tex  part1-intro.tex  part2-intro.tex
preface/: abbreviations.tex  abstract.tex  acknowledgements.tex
scripts/: analyze_floats.py  convert_baseline_to_json.py  dblp_stats.py  drawio_origins.py  export_drawio.py  export_drawio.sh  generate_trend_figures.py  graph_to_dot.py  graph_to_drawio.py  plot_r2c_benchmark_data.py  utils.py  yaml_to_drawio_vertical.py  yaml_to_tikz_vertical.py
scripts/javabytecode-lexer/: pyproject.toml
scripts/javabytecode-lexer/pygments_javabytecode/: lexer.py
(+150 files in other folders)
